add minecraft headline and day 02 and 03 recap

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -33,15 +33,28 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ### One-Hundredth
 
-{Summary}
+<!--
+A special post made to commemorate
 
-Source(s): [[Links]]
+-->
+
+Source(s): [[Article](posts/one-hundredth)]
+
+### Minecraft caves and cliffs update announced
+
+This themed update was a surprise to most of the players. It shook the community and made them go crazy because this theme is perhaps one of the most requested themes for the major updates. A game company that actually listens to its users, can you believe it?!?
+
+![Minecraft caves and cliffs update#f](https://i.redd.it/cdbwq7mykwq51.png "Source: [Reddit](https://i.redd.it/cdbwq7mykwq51.png)")
+
+It will come in Summer 2021, still a couple of months to go, but it has changed and impacted a lot of creators and players on how they play the game, especially redstone users.
+
+Source(s): [[Reddit](https://www.reddit.com/r/Minecraft/comments/j4hjvx/new_update/) | [Windows Central](https://www.windowscentral.com/minecraft-caves-cliffs-update) | [IGN](https://www.ign.com/articles/minecrafts-caves-and-cliffs-update-arrives-in-2021)]
 
 ### RIP Sapper, Svelte is moving to Snowpack
 
 Sapper is the official framework for Svelte to build full-fledged applications with the ability to do SSR or SSG and be an SPA all together.
 
-On Sunday night (or Monday morning my time), 18 October 2018 at Svelte Summit 2020, Rich Harris (original creator) announced that Sapper 1.0 will never be coming. He explained that the future of web development would be moving to a better more future proof alternative.
+On Sunday night (or Monday morning my time), 18 October 2018 at Svelte Summit 2020, Rich Harris (original creator) announced that Sapper 1.0 will never be coming. "The codebase kinda gnarly and it's hard to work with, it's tricky to add valuable features like building for serverless platforms, or pre-rendering a subset of your application as static files". He explained that the future of web development would be moving to a better more future proof alternative.
 
 Svelte would have SSR built-in and will rely more on Hot-Module Reload (HMR) by using Snowpack, rather than the conventional way of bundling everything up, which slows down development a lot. In return, the team have started working on `@sveltejs/kit` as a replacement for Sapper with a bundler and have ported most of the good stuff from Sapper to this new kit.
 
@@ -51,7 +64,11 @@ Of course, it's by no means ready for prime time, the team still has a lot of pl
 
 Personally, I'm really sad to see that HMR isn't coming to Sapper because I first started with Sapper and learned Svelte by building Sapper apps. So, you could also guess that I've made most of my apps with Sapper. I guess all good things must come to an end, and I'm sure that this would be a way better solution in the future, but I'll probably need some time to take this in.
 
-Source(s): [[YT/Svelte Summit 2020](https://www.youtube.com/watch?v=vHHLLJA0b70&t=24060s) | [Reddit/Sapper is dead. Long live Svelte!](https://www.reddit.com/r/sveltejs/comments/jdojpd/sapper_is_dead_long_live_svelte/?utm_medium=android_app&utm_source=share)]
+Please don't take the title literally, that is how most people view it. It doesn't mean that you can't write Sapper apps anymore, or you should immediately abandon your current projects too. Right now Sapper is way more mature and ready for production, there's a lot of people who can testify this. My recommendation is to stick with Sapper right now and wait until Svelte Kit is actually stable and ready for use. Since it has a lot of similarity on its convention and API as Sapper, migrating later won't be a problem at all.
+
+So far, the only downside I could see from using Sapper is that your development experience and time it takes to bundle will degrade as your application gets bigger and more complex, even simple changes will take at least 10 seconds to rebuild. Other than that, it's perfectly fine and I can comfortably say that until Svelte Kit is out, Sapper is the best choice for you to start working on your Svelte app.
+
+Source(s): [[YT/Svelte Summit 2020](https://youtu.be/vHHLLJA0b70?t=24060) or [YT/Rich Harris: Futuristic Web Development](https://youtu.be/qSfdtmcZ4d0) | [Reddit/Sapper is dead. Long live Svelte!](https://www.reddit.com/r/sveltejs/comments/jdojpd/sapper_is_dead_long_live_svelte/?utm_medium=android_app&utm_source=share)]
 
 ***
 
@@ -64,6 +81,28 @@ Source(s): [[YT/Svelte Summit 2020](https://www.youtube.com/watch?v=vHHLLJA0b70&
 [[Reddit](https://www.reddit.com/r/YouShouldKnow/comments/j35bv0/ysk_that_if_you_are_out_of_shape_and_embarrassed/)] You should know: That if you are out of shape and embarrassed to join a gym because of how people may perceive or judge you, know that most people there is either conscious/insecure about their own looks or just focused on their workout without paying attention to others. It's called the Spotlight Effect
 
 ![Yuru Camp Season 2 new visual#d#f](https://external-preview.redd.it/EGe4OYjexWZW8d80SN_E_PLCVnkGQpJ1pfhiCqPWT-I.jpg?auto=webp&s=e09efd585b3379f8c02bbaf9c8fb1864595d3fc8 "[[Reddit](https://www.reddit.com/r/anime/comments/j30kcn/yuru_camp_season_2_new_visual/) | [Preview](https://external-preview.redd.it/EGe4OYjexWZW8d80SN_E_PLCVnkGQpJ1pfhiCqPWT-I.jpg?auto=webp&s=e09efd585b3379f8c02bbaf9c8fb1864595d3fc8)] Yuru Camp Season 2 new visual")
+
+### 02
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/j47i4o/lpt_if_youre_ever_not_sure_what_to_do_clean_when/)] Life pro tip: If you're ever not sure what to do, clean. When you figure it what you should be doing, you'll have a clear work space
+
+![top 10 anime of summer 2020 according to fan-voted results#d#f](https://i.redd.it/di4qjux0joq51.jpg "[[Reddit](https://www.reddit.com/r/anime/comments/j3tzbg/top_10_anime_of_the_season_summer_2020_anime/) | [Preview](https://i.redd.it/di4qjux0joq51.jpg)] Top 10 Anime of the Season Summer 2020 (Anime Corner)")
+
+### 03
+
+![My Hero Academia Season 5 new visual#d#f](https://pbs.twimg.com/media/EjZI7Y6U4AAMfNo.jpg?name=large "[[Reddit](https://www.reddit.com/r/anime/comments/j4cn68/my_hero_academia_season_5_new_visual/) | [Preview](https://pbs.twimg.com/media/EjZI7Y6U4AAMfNo.jpg?name=large)] My Hero Academia Season 5 new visual")
+
+![The Romantic Comedy Where The Childhood Friend Won't Lose#d#f](https://i.redd.it/rg044nadwuq51.jpg "[[Reddit](https://www.reddit.com/r/anime/comments/j4digr/the_romantic_comedy_where_the_childhood_friend/) | [Preview](https://i.redd.it/rg044nadwuq51.jpg)] \"The Romantic Comedy Where The Childhood Friend Won't Lose!\" Anime announced")
+
+![!Video#d#f](https://v.redd.it/n6ypbq4tuuq51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/Minecraft/comments/j4dfp7/made_a_timeline_of_2020_hope_you_like_it_part_5/)] A timeline of 2020 made in Minecraft")
+
+### 18
+
+[[YT/Svelte Society](https://youtu.be/vHHLLJA0b70)] Svelte Summit 2020
+
+### 19
+
+[[GH/Tags](https://github.com/qbittorrent/qBittorrent/releases/tag/release-4.3.0)] qBittorrent 4.3.0 released
 
 ***
 
