move rip sapper to its own post

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -50,25 +50,13 @@ It will come in Summer 2021, still a couple of months to go, but it has changed 
 
 Source(s): [[Reddit](https://www.reddit.com/r/Minecraft/comments/j4hjvx/new_update/) | [Windows Central](https://www.windowscentral.com/minecraft-caves-cliffs-update) | [IGN](https://www.ign.com/articles/minecrafts-caves-and-cliffs-update-arrives-in-2021)]
 
-### RIP Sapper, Svelte is moving to Snowpack
+### RIP Sapper - Svelte is moving to Snowpack
 
-Sapper is the official framework for Svelte to build full-fledged applications with the ability to do SSR or SSG and be an SPA all together.
+Rich Harris finally announced on Svelte Summit 2020 that Sapper 1.0 will never come. It was a sad day for me personally as I've used it extensively in most of my projects. He explained that the future of web development would be moving to a better more future proof alternative.
 
-On Sunday night (or Monday morning my time), 18 October 2018 at Svelte Summit 2020, Rich Harris (original creator) announced that Sapper 1.0 will never be coming. "The codebase kinda gnarly and it's hard to work with, it's tricky to add valuable features like building for serverless platforms, or pre-rendering a subset of your application as static files". He explained that the future of web development would be moving to a better more future proof alternative.
+He's trying to convince us that we need to drop bundlers from our ecosystem and embrace HMR. It was quite a surprise for myself, but truly a welcome one. Using HMR will definitely boost our development process and experience a lot, but I didn't think that they would abandon Sapper and create an entirely new project instead.
 
-Svelte would have SSR built-in and will rely more on Hot-Module Reload (HMR) by using Snowpack, rather than the conventional way of bundling everything up, which slows down development a lot. In return, the team have started working on `@sveltejs/kit` as a replacement for Sapper with a bundler and have ported most of the good stuff from Sapper to this new kit.
-
-Of course, it's by no means ready for prime time, the team still has a lot of plans to improve before they release it to the public. Yes, it's still in private development, so it's not open to public contributions, yet. In the mean time, I don't expect Sapper to immediately "die" and stop all future developments, I'm certain there will be someone who will still work on it and continue its legacy, keep improving and maintaining its codebase, it is open-source after all.
-
-![svelte chooses kit over sapper#d](https://cdn.discordapp.com/attachments/728292755087818924/767513340384903178/4iz1gv.png "[[Discord](https://discord.com/channels/457912077277855764/728292755087818924/767513340615458866) | [Preview](https://cdn.discordapp.com/attachments/728292755087818924/767513340384903178/4iz1gv.png)] Meme by swyx from Discord chat")
-
-Personally, I'm really sad to see that HMR isn't coming to Sapper because I first started with Sapper and learned Svelte by building Sapper apps. So, you could also guess that I've made most of my apps with Sapper. I guess all good things must come to an end, and I'm sure that this would be a way better solution in the future, but I'll probably need some time to take this in.
-
-Please don't take the title literally, that is how most people view it. It doesn't mean that you can't write Sapper apps anymore, or you should immediately abandon your current projects too. Right now Sapper is way more mature and ready for production, there's a lot of people who can testify this. My recommendation is to stick with Sapper right now and wait until Svelte Kit is actually stable and ready for use. Since it has a lot of similarity on its convention and API as Sapper, migrating later won't be a problem at all.
-
-So far, the only downside I could see from using Sapper is that your development experience and time it takes to bundle will degrade as your application gets bigger and more complex, even simple changes will take at least 10 seconds to rebuild. Other than that, it's perfectly fine and I can comfortably say that until Svelte Kit is out, Sapper is the best choice for you to start working on your Svelte app.
-
-Source(s): [[YT/Svelte Summit 2020](https://youtu.be/vHHLLJA0b70?t=24060) or [YT/Rich Harris: Futuristic Web Development](https://youtu.be/qSfdtmcZ4d0) | [Reddit/Sapper is dead. Long live Svelte!](https://www.reddit.com/r/sveltejs/comments/jdojpd/sapper_is_dead_long_live_svelte/?utm_medium=android_app&utm_source=share)]
+Source(s): [[Article](posts/rip-sapper-svelte-is-moving-to-snowpack)]
 
 ***
 
