--- a/content/posts/2020-10-20.rip-sapper-svelte-is-moving-to-snowpack.md
+++ b/content/posts/2020-10-20.rip-sapper-svelte-is-moving-to-snowpack.md
@@ -7,7 +7,7 @@ date:updated:
 image:en:
 ---
 
-Sapper is the official framework for Svelte to build full-fledged applications with the ability to do SSR or SSG and be an SPA all together. On Sunday night (or Monday morning my time), 18 October 2018 at Svelte Summit 2020, Rich Harris announced that Sapper 1.0 will **never come**.
+Sapper is the official framework for Svelte to build full-fledged applications with the ability to do SSR or SSG and be an SPA all together. It has been on early development stage for some time now and finally, on Sunday night (or Monday morning my time) 18 October 2018 at Svelte Summit 2020, Rich Harris announced that Sapper 1.0 will **never come**.
 
 > The codebase kinda gnarly and it's hard to work with, it's tricky to add valuable features like building for serverless platforms, or pre-rendering a subset of your application as static files
 
