posts: add conclusion section

--- a/content/posts/2020-10-24.one-hundredth-of-a-light-year-across-the-milky-way.md
+++ b/content/posts/2020-10-24.one-hundredth-of-a-light-year-across-the-milky-way.md
@@ -40,6 +40,24 @@ I'm telling all of this, as well as my [Past](posts/one-hundredth-of-a-light-yea
 
 I've decided to drop most of my social media some time ago, I didn't fully purge my account since it would disrupt the balance of my online analytics and presence. Lol no, I just kept it so people who needs it can still search for my account, and so that my past self is preserved as an online historical reminiscence for my future self and of course my offsprings.
 
+Dropping social medias and other time-consuming apps have had a huge impact in my life. I might make a separate dedicated post for this, but I can quite confidently say that I'm happier and my mind is more relaxed than before. I got way more time for myself, family, and those friends around me I truly care about.
+
+Because of that, I'll probably drop some more of my online accounts, and probably never come back for good this time. So please don't take offence if I don't reply when you've sent me a message, I'll make an effort to update the list frequently about my socials in [my about section](about/socials) when I change, drop, or add something.
+
+> If you can't think of anything nice to say, don't say anything at all
+
+This was something I learned some years ago, have kept in mind, and will continue to do so. A closing quote I would want more people to know about. It has helped me in a lot of ways and I hope it does change the way some of you think too.
+
+## Conclusion
+
+The thing is, don't worry too much about what other people think about you, just be you the way you want yourself to be. It's not an excuse to be a jerk, as long as you're enjoying yourself without disturbing other people, you do you.
+
+For those of you who love or find yourself judging someone for their clothing, interest, or hobbies, please ask yourself "what does it matter to me", "do I really need to care about it".
+
+When you stop caring about what others think and not care about the personal preference of other people, that's when you'll realize that the world and life in general isn't so bad after all. You'll be more composed, relaxed, and overall nicer as a person.
+
+I've survived another year, another revolution around the sun. I don't care about your wishes when it only comes once a year and this isn't exclusive to just myself, but also to those around you. It would not only feel disingenuous, but it would also show how fake you are.
+
 ***
 Reference(s):
 
