--- a/content/posts/2020-10-24.one-hundredth-of-a-light-year-across-the-milky-way.md
+++ b/content/posts/2020-10-24.one-hundredth-of-a-light-year-across-the-milky-way.md
@@ -8,6 +8,10 @@ image:en:
 
 It's sad to know that after all these years, I've only traveled a little more than one-hundredth of a light-year across the Milky Way, what a minuscule amount it is. Even after over 20 revolutions around the sun, seeing how small that number is, it just shows how tiny we are in the galaxy, just a speck of dust in the vast space of the universe.
 
+<section class="info-box note">
+You can probably skip to Conclusion if you know me IRL
+</section>
+
 Time is something relative made by humans to grasp our existence in this modern world. Being older doesn't always mean knowing more, you could definitely be younger but understand certain things about life better than someone who just happens to be born a couple years earlier. I could say this because I've experienced it firsthand, hence I always try to keep an open mind and disregard any gossip when I'm about to meet someone or an acquaintance.
 
 ## Past
@@ -52,14 +56,40 @@ This was something I learned some years ago, have kept in mind, and will continu
 
 The thing is, don't worry too much about what other people think about you, just be you the way you want yourself to be. It's not an excuse to be a jerk, as long as you're enjoying yourself without disturbing other people, you do you.
 
-For those of you who love or find yourself judging someone for their clothing, interest, or hobbies, please ask yourself "what does it matter to me", "do I really need to care about it".
+If find yourself constantly judging someone for their clothing, interest, or hobbies, ask yourself "what does it matter to me". Do you really need to always talk about other people?
 
 When you stop caring about what others think and not care about the personal preference of other people, that's when you'll realize that the world and life in general isn't so bad after all. You'll be more composed, relaxed, and overall nicer as a person.
 
 I've survived another year, another revolution around the sun. I don't care about your wishes when it only comes once a year and this isn't exclusive to just myself, but also to those around you. It would not only feel disingenuous, but it would also show how fake you are.
+
+That aside, for those who've been with me throughout these years, whether you're still with me, or has been with me and have moved on, I'm grateful for all the experience we share together. After all, you've quite literally been a part of my life, and have played a role in it.
+
+Yes, I do remember and am referring to you, if any of you have reached this far, thank you for taking the time to read this, and thank you for playing a part in my life, I'm grateful for all the things we did and didn't do, and also for all the experiences we had together.
 
 ***
 Reference(s):
 
 - <https://www.space.com/33527-how-fast-is-earth-moving.html>
 - <https://en.wikipedia.org/wiki/Light-year>
+
+Acknowledgement(s):
+
+- All my families and relatives
+- You who I share my childhood with
+- You who always shared your water bottle with me
+- You who made me testify for you on your 17th birthday
+- You who always kept me accompanied after school
+- You who asked me to star on a short film with you
+- You who still treats me as a friend no matter what happens
+- You who have traveled kilometers just to play with me
+- You who once shared your mind with me
+- You who went out of your way to help me in table tennis
+- You who relied on me and made me feel needed
+- You who went through those hardships together with me
+- You who helped me all these times until now
+- You who used me cold-bloodedly and taught me things the hard way
+- You who welcomed me with open arms and always helped me then
+- You who taught me a lot about life and people
+- You who stayed by my side when others would've left
+
+\*Note: list may not be in order and incomplete; *you* may refer to more than one person
