add the widening responsibility for front-end devs

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -9,6 +9,20 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ### Honorable article mentions
 
+- [[CSS-Tricks](https://css-tricks.com/the-widening-responsibility-for-front-end-developers/)] The Widening Responsibility for Front-End Developers
+
+Another great read from Chris Coyier for an evolution of last month's article of the month. For all of you who's going to jump in the web development rabbit hole, especially as a front-end developer (FED), please read this first and understand it thoroughly.
+
+FED isn't just styling and creating layouts in HTML and CSS, it's not as easy or simple as you might've thought initially, there's a lot more to it, a lot of demand for FED and you will need to live up to the expectations.
+
+For those who've dived in this pool and are still in, I encourage you even more to read this and know what kind of work you're actually working and expected to work as you dive deeper. It's not too late to go a different route if this doesn't suit you. No one will blame you for the choice you made.
+
+I'm not trying to scare you away from becoming a FED, but you have all the rights to know what's expected from this field. Especially when everything is always rapidly changing and growing, do you want to spend the rest of your life learning new things every few months?
+
+Yes, technology is always evolving, but front-end's growth is too rapid with only months or weeks between major updates. Pair that with all the prerequisites you still need to understand first, how much of a preparations you need to know before you can actually work on something.
+
+You cannot stop and you must not stop. Once you're in, you must go through it till the end. Front-end will keep evolving and they will leave you behind if you can't keep up. Do you have what it takes to follow it through? If so, then **Godspeed to you**
+
 ## Content of the month
 
 ![alt]({link} "caption")
@@ -57,6 +71,8 @@ Rich Harris finally announced on Svelte Summit 2020 that Sapper 1.0 will never c
 He's trying to convince us that we need to drop bundlers from our ecosystem and embrace HMR. It was quite a surprise for myself, but truly a welcome one. Using HMR will definitely boost our development process and experience a lot, but I didn't think that they would abandon Sapper and create an entirely new project instead.
 
 Source(s): [[Article](posts/rip-sapper-svelte-is-moving-to-snowpack)]
+
+### YouTube-dl received a DMCA takedown from RIAA
 
 ***
 
