--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -117,3 +117,7 @@ As always, let me know if you like this format or have any feedback for the mont
 ## Bonus - Monthly memes
 
 ![clickbait commit messages#d#f](https://external-preview.redd.it/Ta9nQP5kN9NLTDOJ8KV-8ITguvcweoUK8eXxmx5DGSc.jpg?auto=webp&s=ff8e4200dcc8207c60eb7c7cab243d12af9858f4 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j3h53k/this_cto_got_his_staff_to_pay_attention_to_his/)] This CTO got his staff to pay attention to his commit messages! You won't believe how he did it!")
+
+![!Video#d#f](https://preview.redd.it/vul1xe2mtwq51.gif?format=mp4&s=225b645703c04bbd3b2d48d4c91a721300c98ebc "[[Reddit](https://www.reddit.com/r/dankmemes/comments/j4ifsk/plz_what_is_tetrad_analysis/)] Teachers explaining in class")
+
+![x is x plus 1#d#f](https://preview.redd.it/ssomqlj3bwq51.jpg?width=960&crop=smart&auto=webp&s=c56a603b5000961054fbdc914ffc950c491ec8d5 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j4gkxl/screw_mathematicians/)] Screw mathematicians")
