add article of the month

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -7,6 +7,10 @@ Hey folks, welcome back to our monthly digest! As always, feel free to skip ahea
 
 ## Article of the month
 
+![Tracking without JavaScript#f#fb](https://miro.medium.com/max/700/1*5AecJjiH3Z50F_BfOIaEYw.png "[User-Tracking With CSS Only](https://medium.com/javascript-in-plain-english/tracking-with-css-ec98e3d81046) by Louis Petrik")
+
+This was surprisingly cool and scary at the same time. It's crazy, how are you supposed to prevent tracking you've disabled everything, including JavaScript, and the website still tracks you using CSS that's loaded almost at the same time as the markup. You'll need to prepare your own server with all the endpoints and manually include it in the CSS, but still there's nothing stopping them from tracking everything.
+
 ### Honorable article mentions
 
 - [[CSS-Tricks](https://css-tricks.com/the-widening-responsibility-for-front-end-developers/)] The Widening Responsibility for Front-End Developers
