--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -45,6 +45,8 @@ You cannot stop and you must not stop. Once you're in, you must go through it ti
 
 ### Honorable video mentions
 
+Amazing animated video  . Here's a [clip of Felix's reaction](https://www.reddit.com/r/PewdiepieSubmissions/comments/j9eqmw/pewds_reaction_almost_made_me_cry_it_was_perfect/) to the video
+
 ***
 
 ## Headlines of the month
@@ -67,6 +69,12 @@ This themed update was a surprise to most of the players. It shook the community
 It will come in Summer 2021, still a couple of months to go, but it has changed and impacted a lot of creators and players on how they play the game, especially redstone users.
 
 Source(s): [[Reddit](https://www.reddit.com/r/Minecraft/comments/j4hjvx/new_update/) | [Windows Central](https://www.windowscentral.com/minecraft-caves-cliffs-update) | [IGN](https://www.ign.com/articles/minecrafts-caves-and-cliffs-update-arrives-in-2021)]
+
+### RIP HorribleSubs - welcoming SubsPlease as a better replacement
+
+HorribleSubs was a well renowned name in the anime community since forever. They've started more than a decade ago and has been consistently providing us with the latest and fastest anime airing on the time. Early October 2020, just as Summer 2020 anime season ended, they decided to officially close down their service, a good transition point before Fall 2020 season starts. A couple of days later, SubsPlease emerged to fill in the missing throne HS has left for us.
+
+Source(s): [[Reddit](https://www.reddit.com/r/animepiracy/comments/j9snxu/subsplease_a_better_horriblesubserai_replacement/) | [HorribleSubs](https://horriblesubs.info/) | [Twitter](https://twitter.com/yuris_bangs/status/1313286430081331202)]
 
 ### RIP Sapper - Svelte is moving to Snowpack
 
@@ -104,6 +112,20 @@ Source(s): [[Article](posts/rip-sapper-svelte-is-moving-to-snowpack)]
 
 ![!Video#d#f](https://v.redd.it/n6ypbq4tuuq51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/Minecraft/comments/j4dfp7/made_a_timeline_of_2020_hope_you_like_it_part_5/)] A timeline of 2020 made in Minecraft")
 
+### 06
+
+[[Reddit](https://www.reddit.com/r/DataHoarder/comments/j61wcg/g_suite_becomes_google_workspace_12month/) | [Google](https://workspace.google.com/)] G Suite becomes Google Workspace ($12/month Unlimited plan becomes $12/month 2tb plan)
+
+### 09
+
+[[Calligrapher.ai](https://www.calligrapher.ai/)] Amazing realistic computer-generated handwriting
+
+### 11
+
+[[GitHub](https://github.com/IAmStoxe/wirehole) | [Reddit](https://www.reddit.com/r/pihole/comments/j8ovog/wirehole_vpn_ad_blocking_dns_caching_privacy/)] WireHole – VPN, ad blocking, DNS caching, privacy
+
+![!Video#d#f](https://i.imgur.com/P95qkgo.mp4 "[[Reddit](https://www.reddit.com/r/oddlysatisfying/comments/j8uu1f/how_to_make_a_fray_knot/) | [Imgur](https://i.imgur.com/P95qkgo.gifv)] How to make a fray knot")
+
 ### 18
 
 [[YT/Svelte Society](https://youtu.be/vHHLLJA0b70)] Svelte Summit 2020
@@ -125,3 +147,13 @@ As always, let me know if you like this format or have any feedback for the mont
 ![!Video#d#f](https://preview.redd.it/vul1xe2mtwq51.gif?format=mp4&s=225b645703c04bbd3b2d48d4c91a721300c98ebc "[[Reddit](https://www.reddit.com/r/dankmemes/comments/j4ifsk/plz_what_is_tetrad_analysis/)] Teachers explaining in class")
 
 ![x is x plus 1#d#f](https://preview.redd.it/ssomqlj3bwq51.jpg?width=960&crop=smart&auto=webp&s=c56a603b5000961054fbdc914ffc950c491ec8d5 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j4gkxl/screw_mathematicians/)] Screw mathematicians")
+
+![went from AB student to as long as I pass student#d#f](https://preview.redd.it/17jbqgxr1er51.jpg?width=640&crop=smart&auto=webp&s=2db2fec040bbd27d324e8036ceb8bcdd9debc57d "[[Reddit](https://www.reddit.com/r/memes/comments/j5xdif/im_in_this_photo_and_i_dont_like_it/)] I'm in this photo and I don't like it")
+
+![trusting the toilet in the dream#d#f](https://preview.redd.it/zkkkf3m9ccr51.jpg?width=640&crop=smart&auto=webp&s=83c9190483f59b02bc8b54e7328e08ff6600aedb "[[Reddit](https://www.reddit.com/r/dankmemes/comments/j5ruyc/betrayal/)] Betrayal in the dream")
+
+![tree in computer science#d#f](https://i.redd.it/zf19wzbcjer51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j5yr2v/spotted_in_my_intro_to_programming_course_material/)] Trees are supposed to grow up, not down")
+
+![excel is not a database#d#f](https://preview.redd.it/o52qa32e4wr51.jpg?width=960&crop=smart&auto=webp&s=35680e2234b53ef43312901fc2bbbb7e6b7db884 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j7f8c7/_/)] Excel is not a database!")
+
+![i'm sad everyday#d#f](https://i.redd.it/460eaiyp2ls51.jpg "[[Reddit](https://www.reddit.com/r/me_irl/comments/j9jh8l/me_irl/)] No energy to hide it today")
