add second article mention

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -27,6 +27,10 @@ Yes, technology is always evolving, but front-end's growth is too rapid with onl
 
 You cannot stop and you must not stop. Once you're in, you must go through it till the end. Front-end will keep evolving and they will leave you behind if you can't keep up. Do you have what it takes to follow it through? If so, then **Godspeed to you**
 
+- [[Troy Hunt](https://www.troyhunt.com/everything-you-ever-wanted-to-know/)] Everything you ever wanted to know about building a secure password reset feature
+
+An amazing article written from 2012 which is still relevant today. I can't say much about this since it already explains most of my worries from applications out there in the article. It has a [TL;DR version in a diagram form](https://www.troyhunt.com/content/images/2016/02/21782177Password-Reset5.png) too.
+
 ## Content of the month
 
 ![alt]({link} "caption")
