add more headlines, recap, and memes

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -88,7 +88,29 @@ He's trying to convince us that we need to drop bundlers from our ecosystem and 
 
 Source(s): [[Article](posts/rip-sapper-svelte-is-moving-to-snowpack)]
 
-### YouTube-dl received a DMCA takedown from RIAA
+### When did dinner become a crime
+
+There's a video that reached the front page of Reddit showing a homeless guy that was invited to eat inside McDonald's in Myrtle Beach, but was kicked outside for "trespassing". He didn't even ask for food, the guy invited the homeless guy.
+
+The female cop quote Judge Dredd by saying "I'm the law". How is it considered illegal to feed homeless people, how is anybody different from everybody. Illegal to not have any money, illegal to starve to death, illegal to have money and try to feed yourself so you don't die. What even is the point of living when everything you do as a homeless person is illegal.
+
+Source(s): [[Reddit](https://www.reddit.com/r/PublicFreakout/comments/javs2x/homeless_guy_is_a_human_too_dont_be_like_these/)]
+
+### Do not copy paste into a shell
+
+Modern JavaScript Clipboard API allows a website to overwrite what you copied without your confirmation or permission. This allows people with malicious intent to give you a snippet of shell code for you to copy and paste to your shell, but it could contain other code where it would automatically be executed because of the trailing newline.
+
+Source(s): [[Reddit](https://www.reddit.com/r/programming/comments/jbkdw4/dont_copy_paste_into_a_shell/) | [Writing](https://briantracy.xyz/writing/copy-paste-shell.html)]
+
+### RIAA meets the Streisand effect after filing a DMCA takedown on YT-dl
+
+YouTube-dl has been taken down for copyright violations by RIAA. But, as most of use knew, you can't kill open-source. Anything that has been uploaded to the internet will never be lost, and that applies to stuff like this.
+
+Immediately after this takedown, someone created a new tree in the DMCA repository and replaced everything with the original source code. It took advantage of how GitHub backend works and exploits it. The author has deleted the fork, and GitHub has took the effort to actually delete the PR from existence, but you can still see the relevant tree.
+
+Not long after, the Streisand effect takes place and GitHub is flooded with new repositories. GitHub now hosts hundreds (thousands without search filters) of new repositories containing the original source code.
+
+Source(s): [[Reddit/Takedown](https://www.reddit.com/r/programming/comments/jgub36/youtubedl_just_received_a_dmca_takedown_from_riaa/) | [GH/DMCA](https://github.com/github/dmca/blob/master/2020/10/2020-10-23-RIAA.md) | [Reddit/Exploit](https://www.reddit.com/r/programming/comments/jhlhok/someone_replaced_the_github_dmca_repo_with/) | [Reddit/StreisandEffect](https://www.reddit.com/r/Piracy/comments/jiwzf2/angry_youtubedl_users_flood_github_with_new_repos/) | [BleepingComputer](https://www.bleepingcomputer.com/news/software/angry-youtube-dl-users-flood-github-with-new-repos-after-takedown/)]
 
 ***
 
@@ -130,13 +152,57 @@ Source(s): [[Article](posts/rip-sapper-svelte-is-moving-to-snowpack)]
 
 ![!Video#d#f](https://i.imgur.com/P95qkgo.mp4 "[[Reddit](https://www.reddit.com/r/oddlysatisfying/comments/j8uu1f/how_to_make_a_fray_knot/) | [Imgur](https://i.imgur.com/P95qkgo.gifv)] How to make a fray knot")
 
+### 13
+
+[[CNN](https://edition.cnn.com/2020/10/12/health/johnson-coronavirus-vaccine-pause-bn/index.html)] Johnson & Johnson pauses Covid-19 vaccine trial after 'unexplained illness'
+
+[[GitHub](https://github.com/cyanharlow/purecss-character)] Pure CSS Character
+
+[[GH/Blog](https://github.blog/2020-10-13-presenting-v7-0-0-of-the-npm-cli/)] Presenting v7.0.0 of the npm CLI
+
+### 14
+
+[[Reddit](https://www.reddit.com/r/Coronavirus/comments/jazf4e/man_who_called_covid_a_hoax_feels_guilty_after_he/) | [People](https://people.com/health/man-called-covid-hoax-feels-guilty-14-family-members-test-positive-2-die/)] Man Who Called COVID a ‘Hoax’ Feels Guilty After He and 13 Family Members Test Positive — and 2 Die: "The feeling that I have is kind of like what, I would say, a drunk driver would have if they killed their family," says Tony Green, who hosted the family gathering that led to their infections.
+
+[[Reddit](https://www.reddit.com/r/Unexpected/comments/jadb4a/when_you_get_struck_by_lightning/)] Unexpected: struck by lightning
+
+[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/jazoaa/a_retired_royal_marine_suffering_from/)] A retired Royal Marine suffering from degenerative Parkinson’s Disease gets much better after DBS surgery!
+
+### 15
+
+![cardinal bird#d#f](https://i.redd.it/hjoborypr6t51.jpg "[[Reddit](https://www.reddit.com/r/wholesomememes/comments/jbgubj/never_lower_your_standards_go_somewhere_you_are/)] Never lower your standards. Go somewhere you are appreciated")
+
+### 16
+
+![demon slayer gang going to the theater#d#f](https://i.imgur.com/rtWeX7h.jpg "[[Reddit](https://www.reddit.com/r/DemonSlayerAnime/comments/jbqd9r/the_gang_all_going_to_see_the_movie_at_the_theater/) | [Preview](https://external-preview.redd.it/pjDheF-3qJXOcGkJE9E3lnrSTwaLsuCvZ080ergtegQ.jpg?width=640&crop=smart&auto=webp&s=252672b7d8610a11818e42018a261b7ba7d6d8b2)] Demon Slayer's gang going to the theater")
+
+### 17
+
+[[Reddit](https://www.reddit.com/r/AskReddit/comments/jcxgtz/at_what_moment_did_you_realize_fuck_im_old/)] List of moments when you realize you're old
+
+[[Reddit](https://www.reddit.com/r/PublicFreakout/comments/jcoinq/maz_jobrani_vs_trump_supporting_karen/)] Stand-up Comedy: Maz Jobrani VS Trump supporting karen
+
 ### 18
 
 [[YT/Svelte Society](https://youtu.be/vHHLLJA0b70)] Svelte Summit 2020
 
 ### 19
 
-[[GH/Tags](https://github.com/qbittorrent/qBittorrent/releases/tag/release-4.3.0)] qBittorrent 4.3.0 released
+[[GH/Tags](https://github.com/qbittorrent/qBittorrent/releases/tag/release-4.3.0) | [qBittorrent](https://www.qbittorrent.org/news.php)] qBittorrent 4.3.0 released
+
+### 20
+
+[[Reddit](https://www.reddit.com/r/javascript/comments/jes44j/nodejs_v1500_is_here/) | [Medium](https://nodejs.medium.com/node-js-v15-0-0-is-here-deb00750f278)] Node.js v15.0.0 is here!
+
+### 22
+
+[[Reddit](https://www.reddit.com/r/funny/comments/jfogat/hi_5/)] A kid hi-5 a pastor
+
+### 25
+
+![it may not seem like a lot#d#f](https://preview.redd.it/myou8gjw04v51.png?width=960&crop=smart&auto=webp&s=b38fa7a603db4820c7681663b381b49c6c5a7ee7 "[[Reddit](https://www.reddit.com/r/wholesomememes/comments/jhh0pp/your_best_is_good_enough/)] Your best will always be good enough")
+
+![Kaguya-sama season 3 visual banner#d#f](https://preview.redd.it/7np2w8ngh7v51.png?width=960&crop=smart&auto=webp&s=b8b7de9e8ee5125b05a14481217323bf16f52aba "[[Reddit](https://www.reddit.com/r/anime/comments/jhqdgv/kaguyasama_love_is_war_season_3_announced/)] Kaguya-sama: Love Is War - Season 3 announced")
 
 ***
 
@@ -161,3 +227,19 @@ As always, let me know if you like this format or have any feedback for the mont
 ![excel is not a database#d#f](https://preview.redd.it/o52qa32e4wr51.jpg?width=960&crop=smart&auto=webp&s=35680e2234b53ef43312901fc2bbbb7e6b7db884 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j7f8c7/_/)] Excel is not a database!")
 
 ![i'm sad everyday#d#f](https://i.redd.it/460eaiyp2ls51.jpg "[[Reddit](https://www.reddit.com/r/me_irl/comments/j9jh8l/me_irl/)] No energy to hide it today")
+
+![programmers who doesn't follow naming convention#d#f](https://i.redd.it/w80l7lto96t51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jbfdog/some_crimes/)] When someone doesn't follow naming conventions")
+
+![interview as employee vs freelancer#d#f](https://preview.redd.it/tz0ni6a0u6t51.jpg?width=960&crop=smart&auto=webp&s=e4499ebee481690ccea4d49730556895550e60d5 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jbh0ml/interview_as_employee_vs_interview_as_freelancer/)] Interview as Employee vs. Interview as Freelancer")
+
+![response 200, body status code 400#d#f](https://external-preview.redd.it/E2KpmsEFgr7aKmG480UpEvRlXRAtMXXGAMFgUht-6XY.jpg?width=960&crop=smart&auto=webp&s=e68a6fce78c012cfbc9a32c72c27dc61f968f3e4 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jcgwri/who_cares_about_rest/)] Who cares about proper REST")
+
+![programmers with and without internet#d#f](https://i.redd.it/k6kpd3cfgot51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jcxml8/it_is_what_it_is/)] Programmers with vs. without internet")
+
+![boomers vs millennials vs gen-z#d#f](https://preview.redd.it/mgibqrhdott51.jpg?width=960&crop=smart&auto=webp&s=e5782fc0e380de33777ac10841fc7f9f7969f954 "[[Reddit](https://www.reddit.com/r/memes/comments/jddeoa/this_is_big_brain_time/)] Big brain sexualization from boomers to gen-z")
+
+![i'm gonna trust you with this#d#f](https://i.redd.it/b3cmg9u3c6u51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jei6my/anytime_i_see_regex/)] Anytime I see regex")
+
+![NASA when an asteroid nearly misses Earth#d#f](https://i.redd.it/da8h2xbjepu51.jpg "[[Reddit](https://www.reddit.com/r/memes/comments/jg7j2u/that_was_a_close_one/)] That was a close one")
+
+![how people think building a PC vs. how it actually is#d#f](https://i.redd.it/dhrynogsj1v51.png "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/jh8jtb/they_cant_see_the_truth/)] How building a PC actually is")
