--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -55,20 +55,15 @@ Amazing animated video  . Here's a [clip of Felix's reaction](https://www.reddit
 
 ## Headlines of the month
 
-### One-Hundredth
+### One-Hundredth of a Light-Year Across the Milky Way
 
-<!--
-A special post made to commemorate
+This month marks another completed revolution for me. This time, I felt the need to make a special post to commemorate it. It's in my best interest to make this as general as possible, so that all of the readers would still understand and get my point. I do reserve the last section for everyone that's been involved in my life, one way or another.
 
--->
-
-Source(s): [[Article](posts/one-hundredth)]
+Source(s): [[Article](posts/one-hundredth-of-a-light-year-across-the-milky-way)]
 
 ### Minecraft caves and cliffs update announced
 
 This themed update was a surprise to most of the players. It shook the community and made them go crazy because this theme is perhaps one of the most requested themes for the major updates. A game company that actually listens to its users, can you believe it?!?
-
-![Minecraft caves and cliffs update#f](https://i.redd.it/cdbwq7mykwq51.png "Source: [Reddit](https://i.redd.it/cdbwq7mykwq51.png)")
 
 It will come in Summer 2021, still a couple of months to go, but it has changed and impacted a lot of creators and players on how they play the game, especially redstone users.
 
@@ -84,7 +79,7 @@ Source(s): [[Reddit](https://www.reddit.com/r/animepiracy/comments/j9snxu/subspl
 
 Rich Harris finally announced on Svelte Summit 2020 that Sapper 1.0 will never come. It was a sad day for me personally as I've used it extensively in most of my projects. He explained that the future of web development would be moving to a better more future proof alternative.
 
-He's trying to convince us that we need to drop bundlers from our ecosystem and embrace HMR. It was quite a surprise for myself, but truly a welcome one. Using HMR will definitely boost our development process and experience a lot, but I didn't think that they would abandon Sapper and create an entirely new project instead.
+He's trying to convince us that we need to drop bundlers from our ecosystem and embrace HMR. It was quite a surprise for myself, but truly a welcome one. Using HMR will definitely boost our development process and experience a lot, but I didn't actually expect that they would abandon Sapper and create an entirely new project instead.
 
 Source(s): [[Article](posts/rip-sapper-svelte-is-moving-to-snowpack)]
 
