wrap up final sections

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -193,11 +193,19 @@ Source(s): [[Reddit/Takedown](https://www.reddit.com/r/programming/comments/jgub
 
 [[Reddit](https://www.reddit.com/r/funny/comments/jfogat/hi_5/)] A kid hi-5 a pastor
 
+### 24
+
+[[Reddit](https://www.reddit.com/r/privacy/comments/jh8imx/a_deepfake_bot_is_creating_nudes_out_of_regular/) | [CNET](https://www.cnet.com/news/deepfake-bot-on-telegram-is-violating-women-by-forging-nudes-from-regular-pics/)] A deepfake bot is creating nudes out of regular photos
+
 ### 25
 
 ![it may not seem like a lot#d#f](https://preview.redd.it/myou8gjw04v51.png?width=960&crop=smart&auto=webp&s=b38fa7a603db4820c7681663b381b49c6c5a7ee7 "[[Reddit](https://www.reddit.com/r/wholesomememes/comments/jhh0pp/your_best_is_good_enough/)] Your best will always be good enough")
 
 ![Kaguya-sama season 3 visual banner#d#f](https://preview.redd.it/7np2w8ngh7v51.png?width=960&crop=smart&auto=webp&s=b8b7de9e8ee5125b05a14481217323bf16f52aba "[[Reddit](https://www.reddit.com/r/anime/comments/jhqdgv/kaguyasama_love_is_war_season_3_announced/)] Kaguya-sama: Love Is War - Season 3 announced")
+
+### 28
+
+![cheetah touched by a photographer#d#f](https://preview.redd.it/om3c29bv7sv51.jpg?width=640&crop=smart&auto=webp&s=52daba5eaf5abfb5800a4046e2be6799a55135fa "[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/jjix8u/when_the_photographer_touched_the_cheetah/)] When someone you trust finally touches you and you realize you've been starved for physical affection all your life")
 
 ***
 
@@ -238,3 +246,5 @@ As always, let me know if you like this format or have any feedback for the mont
 ![NASA when an asteroid nearly misses Earth#d#f](https://i.redd.it/da8h2xbjepu51.jpg "[[Reddit](https://www.reddit.com/r/memes/comments/jg7j2u/that_was_a_close_one/)] That was a close one")
 
 ![how people think building a PC vs. how it actually is#d#f](https://i.redd.it/dhrynogsj1v51.png "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/jh8jtb/they_cant_see_the_truth/)] How building a PC actually is")
+
+![big data is like teenage stuff#d#f](https://i.redd.it/2gzr4u6fvrv51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/jji4u6/these_professors_need_to_slow_tf_down/)] These professors need to slow tf down")
