add music of the month

--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -39,13 +39,13 @@ An amazing article written from 2012 which is still relevant today. I can't say 
 
 ## Music of the month | [Spotify Playlist](spotify:playlist:5MEc6r4ZMyu4W9gNk4CXtY)
 
-![!YouTube]({youtube_id} "caption")
+![!YouTube#hb](sAuEeM_6zpk "[[Spotify](spotify:track:4BE1OloRc9xwjyqA4wFFuN)] YOASOBI「あの夢をなぞって・Tracing that Dream」")
 
 ### Honorable music mentions
 
 ## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut56dIV-Yn2FnawPcTXPHJS_l)
 
-![!YouTube]({youtube_id} "caption")
+![!YouTube#hb]({youtube_id} "caption")
 
 ### Honorable video mentions
 
