--- a/content/curated/digest/202010.md
+++ b/content/curated/digest/202010.md
@@ -17,13 +17,7 @@ This was surprisingly cool and scary at the same time. It's crazy, how are you s
 
 Another great read from Chris Coyier for an evolution of last month's article of the month. For all of you who's going to jump in the web development rabbit hole, especially as a front-end developer (FED), please read this first and understand it thoroughly.
 
-FED isn't just styling and creating layouts in HTML and CSS, it's not as easy or simple as you might've thought initially, there's a lot more to it, a lot of demand for FED and you will need to live up to the expectations.
-
-For those who've dived in this pool and are still in, I encourage you even more to read this and know what kind of work you're actually working and expected to work as you dive deeper. It's not too late to go a different route if this doesn't suit you. No one will blame you for the choice you made.
-
-I'm not trying to scare you away from becoming a FED, but you have all the rights to know what's expected from this field. Especially when everything is always rapidly changing and growing, do you want to spend the rest of your life learning new things every few months?
-
-Yes, technology is always evolving, but front-end's growth is too rapid with only months or weeks between major updates. Pair that with all the prerequisites you still need to understand first, how much of a preparations you need to know before you can actually work on something.
+Technology is always evolving, but front-end's growth is too rapid with only months or weeks between major updates. Pair that with all the prerequisites you still need to understand first, how much of a preparations you need to know before you can actually work on something.
 
 You cannot stop and you must not stop. Once you're in, you must go through it till the end. Front-end will keep evolving and they will leave you behind if you can't keep up. Do you have what it takes to follow it through? If so, then **Godspeed to you**
 
@@ -43,13 +37,38 @@ An amazing article written from 2012 which is still relevant today. I can't say 
 
 ### Honorable music mentions
 
+![!YouTube#d](h1Ebp1_f6Q0 "[[Spotify](spotify:track:0T4AitQuq8IJhWBWuZwkFA)] 群青 (Ultramarine) by YOASOBI")
+
+YOASOBI's new song 'Ultramarine' was a tribute to 'Blue Period' and [claims it was inspired by Tsubasa Yamaguchi's manga series](https://www.otaquest.com/yoasobi-blue-period-ultramarine/). Some say that [this song hits different after they read Blue Period](https://www.youtube.com/watch?v=h1Ebp1_f6Q0&lc=UgxkXBIYHHdbHr2Ycul4AaABAg), but I'm already enjoying this even without reading the relevant manga.
+
+![!YouTube#d](dJf4wCdLU18 "[[Spotify](spotify:track:4KcTqk3YtbJNVhvbhBDVw2)] Heart Forecast by Eve")
+
+Another beautifully animated and amazing MV. Kokoro Yohou or Heart Forecast is a new single by Eve this year. It's lyrics and melodies are just on point, catchy, and speaks to you personally.
+
+![!YouTube#d](S5W6Nv596Qc "[[Spotify](spotify:track:49OUtJLneAG5nOAISHOxqC)] Slippy & Micah Martin - Fatal")
+
+A collaboration from two of my most favorite artists from Monstercat, Slippy with the heavy drops and amazing vocals from Micah Martin, both brings in another Trap single.
+
 ## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut56dIV-Yn2FnawPcTXPHJS_l)
 
-![!YouTube#hb]({youtube_id} "caption")
+![!YouTube#hb](3HckuvdqboU "The Most Toxic Way to Study. It Hurts Your Grades.")
+
+A video not just for students, but everyone out there who thought lightly about their health and well-being by thinking it's ok to not sleep once in a while. Not that I can speak for myself, but I'm at least proactively trying to schedule myself better so I can rest regularly.
 
 ### Honorable video mentions
 
-Amazing animated video  . Here's a [clip of Felix's reaction](https://www.reddit.com/r/PewdiepieSubmissions/comments/j9eqmw/pewds_reaction_almost_made_me_cry_it_was_perfect/) to the video
+![!YouTube#d](s6TXDFp1EcM "Which type of milk is best for you?")
+
+Find out which type of milk is the best for you. Spoiler alert, any of them is just as beneficial to you as any other. Find out more by watching the video.
+
+![!YouTube#d](XRr1kaXKBsU "Why Gravity is NOT a Force")
+![!YouTube#d](pTn6Ewhb27k "Why no one has measured the speed of light")
+
+Actual mind-blowing take on relativity and the speed of light by Veritasium, and another bonus video about Gravity and why it's not actually a force.
+
+![!YouTube#d](0a1r0JaONS4 "The Showdown - Animator vs. Animation Shorts Ep 4")
+
+An epic showdown and ending to the Animator vs. Animation saga, watch the final match between The Chosen One and The Dark Lord in this animated video by Alan Becker.
 
 ***
 
